--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-ts-server-boilerplate",
+  "name": "@cribswap/server",
   "version": "0.0.1",
   "description": "Awesome project developed with TypeORM.",
   "license": "MIT",
@@ -53,7 +53,8 @@
     "sparkpost": "^2.1.4",
     "typeorm": "0.2.24",
     "uuid": "^8.0.0",
-    "yup": "^0.28.5"
+    "yup": "^0.28.5",
+    "@cribswap/common": "1.0.0"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node --files src/index.ts",
