These files are also part of the previous commit about the creation of the controller package

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,7 +25,8 @@
     "tslint-react": "^5.0.0",
     "typescript": "~3.7.2",
     "yup": "^0.29.1",
-    "@cribswap/common": "1.0.0"
+    "@cribswap/common": "1.0.0",
+    "@cribswap/controller": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
