Calling the register mutation from the Register Controller to register a user with the form

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cd packages/web && react-scripts start"
+    "dev": "cd packages/web && react-scripts start",
+    "build-c": "cd packages/controller && yarn build"
   },
   "workspaces": [
     "packages/*"
