--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -8,7 +8,10 @@
     "build": "rm -rf ./dist && tsc"
   },
   "dependencies": {
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "react": "^16.13.1",
+    "react-apollo": "^2.1.6",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
