Added the types for the register mutation in the controller. They are generated with the script gen-types now

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,6 +7,7 @@
     "username": "postgres",
     "password": "",
     "database": "cribswap-db",
+    "dropSchema": true,
     "synchronize": true,
     "logging": false,
     "entities": ["src/entity/**/*.ts"],
