--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -5,7 +5,8 @@
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rm -rf ./dist && tsc"
+    "build": "rm -rf ./dist && tsc",
+    "gen-types": "apollo client:codegen --endpoint=http://localhost:4000 --target=typescript"
   },
   "dependencies": {
     "graphql": "^15.0.0",
