Implemented docker, dokku and lerna. Automated a deployment of the server and common packages to digital ocean. Made the changes in the server code to be able to connect to postgres and redis in production

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,5 +1,11 @@
 [
   {
+    "name": "production",
+    "type": "postgres",
+    "synchronize": true,
+    "logging": false
+  },
+  {
     "name": "development",
     "type": "postgres",
     "host": "localhost",
@@ -7,7 +13,6 @@
     "username": "postgres",
     "password": "",
     "database": "cribswap-db",
-    "dropSchema": true,
     "synchronize": true,
     "logging": false,
     "entities": ["src/entity/**/*.ts"],
