--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "license": "MIT",
   "devDependencies": {
+    "@gql2ts/types": "^1.9.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.13",
     "@types/express": "^4.17.6",
@@ -19,7 +20,9 @@
     "@types/request-promise": "^4.1.46",
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^7.0.3",
+    "@types/ws": "^7.2.4",
     "@types/yup": "^0.28.0",
+    "copyfiles": "^2.3.0",
     "gql2ts": "^1.10.1",
     "nodemon": "^2.0.3",
     "ts-jest": "^25.4.0",
@@ -28,6 +31,7 @@
     "typescript": "3.8.3"
   },
   "dependencies": {
+    "@cribswap/common": "1.0.0",
     "@gql2ts/from-schema": "^2.0.0-4",
     "@types/request": "^2.48.5",
     "bcryptjs": "^2.4.3",
@@ -53,13 +57,13 @@
     "sparkpost": "^2.1.4",
     "typeorm": "0.2.24",
     "uuid": "^8.0.0",
-    "yup": "^0.28.5",
-    "@cribswap/common": "1.0.0"
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node --files src/index.ts",
     "test": "NODE_ENV=test TS_NODE_FILES=true jest",
     "test-watch": "NODE_ENV=test TS_NODE_FILES=true jest --watch",
+    "build": "rm -rf ./dist && tsc && copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
