--- a/packages/app/app.json
+++ b/packages/app/app.json
@@ -4,7 +4,7 @@
     "description": "This project is really great.",
     "slug": "ts-app",
     "privacy": "public",
-    "sdkVersion": "27.0.0",
+    "sdkVersion": "34.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -25,7 +25,7 @@
     "packagerOpts": {
       "config": "rn-cli.config.js",
       "projectRoots": "",
-      "sourceExts": ["ts", "tsx"],
+      "sourceExts": ["ts", "tsx", "js"],
       "transformer": "node_modules/react-native-typescript-transformer/index.js"
     }
   }
