apollo for native, making native elements work, just a button in registerconnector to deploy to android.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "nohoist": [
       "**/react-native",
       "**/react-native/**",
+      "**/react-native-elements",
+      "**/react-native-elements/**",
       "**/expo",
       "**/expo/**",
       "**/react-native-typescript-transformer",
