--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,14 +4,24 @@
   "main": "node_modules/expo/AppEntry.js",
   "private": true,
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "expo": "^34.0.0",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "react": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz"
+    "react-apollo": "^3.1.5",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
+    "react-native-elements": "^2.0.1",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@types/expo": "^33.0.0",
     "@types/react": "^16.3.17",
     "@types/react-native": "^0.55.17",
+    "@types/react-native-elements": "^0.18.0",
+    "@types/react-router-native": "^5.1.0",
     "metro-bundler-config-yarn-workspaces": "^1.0.3",
     "react-native-typescript-transformer": "^1.2.9",
     "typescript": "^2.9.1"
